# vscode

my_cpp_project/: CMakeLists.txt
my_cpp_project/include/: my_header.h
my_cpp_project/src/: main.cpp
